Archive2/e1/fd06609cdb2b43/output
main.cpp: In function 'int main()':
main.cpp:15:19: error: passing 'Myclass' as 'this' argument discards qualifiers [-fpermissive]
   foo( bar().truc() );   // error
                   ^
main.cpp:5:15: note:   in call to 'Myclass& Myclass::truc() &'
    Myclass &  truc() &  { return           *this;  }
               ^
